# ledgerly

./: .gitignore  ARCHITECTURE.md  README.md  pyproject.toml
ledgerly/: __init__.py  cli.py  models.py
ledgerly/adapters/: __init__.py  base.py  fixture.py  shopify.py
ledgerly/engine/: __init__.py  names.py  styles.py  template_mode.py  workbook.py
ledgerly/engine/tabs/: __init__.py  cohort_ltv.py  controls.py  dashboard.py  inventory.py  raw_data.py  sku_margin.py
ledgerly/fixtures/: sample_data.json
ledgerly/templates/: brand_report.xlsx
scripts/: generate_fixture.py  make_template.py
tests/: conftest.py  test_charts.py  test_cli.py  test_conditional_formatting.py  test_engine_formulas.py  test_models.py  test_named_ranges.py  test_shopify_mapping.py  test_template_mode.py
