[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ledgerly"
version = "1.0.0"
description = "Shopify operations workbook engine — live Excel formulas for DTC ops reporting"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "openpyxl>=3.1.2",
    "requests>=2.31.0",
    "click>=8.1.7",
    "pydantic>=2.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
]

[project.scripts]
ledgerly = "ledgerly.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["ledgerly*"]

[tool.setuptools.package-data]
ledgerly = ["fixtures/*.json", "templates/*.xlsx"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
